manifests/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: dev
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: todo-dev.dev-expert.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app
                port:
                  number: 80
  tls:
    - hosts:
        - todo-dev.dev-expert.pro
      secretName: letsencrypt-nginx
